新增week1課程內容

--- a/README.html
+++ b/README.html
@@ -379,8 +379,33 @@ $(document).ready(function () {
 
 <div class="section level1">
 <h1>2019夏季學院【資料科學程式設計】</h1>
-<p>學生：趙文 學校：國立臺灣師範大學 系名：人類發展與家庭學系營養與科學教育組</p>
-<p># Week 1</p>
+<p>學生：趙文<br> 學校：國立臺灣師範大學<br> 學系：人類發展與家庭學系營養與科學教育組大四<br> 學號：40406311E</p>
+</div>
+<div id="homework" class="section level1">
+<h1>HomeWork</h1>
+<ol style="list-style-type: decimal">
+<li><a href="https://jellyweiwei.github.io/Data-Science/Week%201/test.html">HW:0</a></li>
+</ol>
+</div>
+<div id="week-1" class="section level1">
+<h1>Week 1</h1>
+<div id="in-class" class="section level3">
+<h3>In Class</h3>
+<ol style="list-style-type: decimal">
+<li>註冊Github</li>
+<li>安裝R&amp;RStudio</li>
+<li>測試RMarkdown</li>
+</ol>
+</div>
+<div id="at-home" class="section level3">
+<h3>At Home</h3>
+</div>
+</div>
+<div id="week-2" class="section level1">
+<h1>Week 2</h1>
+</div>
+<div id="week-3" class="section level1">
+<h1>Week 3</h1>
 </div>
 
 
