--- a/README.html
+++ b/README.html
@@ -384,28 +384,64 @@ $(document).ready(function () {
 <div id="homework" class="section level1">
 <h1>HomeWork</h1>
 <ol style="list-style-type: decimal">
-<li><a href="https://jellyweiwei.github.io/Data-Science/Week%201/test.html">HW:0</a></li>
+<li><a href="https://jellyweiwei.github.io/Data-Science/Week%201/test.html">HW:0 RMarkdown html</a></li>
 </ol>
 </div>
 <div id="week-1" class="section level1">
 <h1>Week 1</h1>
-<div id="in-class" class="section level3">
-<h3>In Class</h3>
+<div id="section" class="section level3">
+<h3>7/8</h3>
+<div id="in-class" class="section level4">
+<h4>In Class</h4>
 <ol style="list-style-type: decimal">
 <li>註冊Github</li>
 <li>安裝R&amp;RStudio</li>
-<li>測試RMarkdown</li>
+<li>測試RMarkdown #### At Home ### 7/11 #### In Class #### At Home</li>
 </ol>
 </div>
-<div id="at-home" class="section level3">
-<h3>At Home</h3>
 </div>
 </div>
 <div id="week-2" class="section level1">
 <h1>Week 2</h1>
+<div id="section-1" class="section level3">
+<h3>7/15</h3>
+<div id="in-class-1" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
+<div id="section-2" class="section level3">
+<h3>7/18</h3>
+<div id="in-class-2" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home-1" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
 </div>
 <div id="week-3" class="section level1">
 <h1>Week 3</h1>
+<div id="section-3" class="section level3">
+<h3>7/22</h3>
+<div id="in-class-3" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home-2" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
+<div id="section-4" class="section level3">
+<h3>7/25</h3>
+<div id="in-class-4" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home-3" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
 </div>
 
 
