--- a/README.html
+++ b/README.html
@@ -393,28 +393,20 @@ $(document).ready(function () {
 <h3>7/8</h3>
 <div id="in-class" class="section level4">
 <h4>In Class</h4>
+<p>*講義:<a href="https://docs.google.com/presentation/d/e/2PACX-1vRNotYqGl42khFyyjuiRYQ9cOOwNsBgGXgW-IBoIJDdiG6T2Adw2X-SO4dDGPhKqd7JlEb3ku9Hmn_7/pub?start=false&amp;loop=false&amp;delayms=3000&amp;slide=id.p">資料科學程式設計</a></p>
 <ol style="list-style-type: decimal">
 <li>註冊Github</li>
 <li>安裝R&amp;RStudio</li>
-<li>測試RMarkdown #### At Home ### 7/11 #### In Class #### At Home</li>
+<li>測試RMarkdown</li>
 </ol>
-</div>
-</div>
-</div>
-<div id="week-2" class="section level1">
-<h1>Week 2</h1>
-<div id="section-1" class="section level3">
-<h3>7/15</h3>
-<div id="in-class-1" class="section level4">
-<h4>In Class</h4>
 </div>
 <div id="at-home" class="section level4">
 <h4>At Home</h4>
 </div>
 </div>
-<div id="section-2" class="section level3">
-<h3>7/18</h3>
-<div id="in-class-2" class="section level4">
+<div id="section-1" class="section level3">
+<h3>7/11</h3>
+<div id="in-class-1" class="section level4">
 <h4>In Class</h4>
 </div>
 <div id="at-home-1" class="section level4">
@@ -422,23 +414,44 @@ $(document).ready(function () {
 </div>
 </div>
 </div>
-<div id="week-3" class="section level1">
-<h1>Week 3</h1>
-<div id="section-3" class="section level3">
-<h3>7/22</h3>
-<div id="in-class-3" class="section level4">
+<div id="week-2" class="section level1">
+<h1>Week 2</h1>
+<div id="section-2" class="section level3">
+<h3>7/15</h3>
+<div id="in-class-2" class="section level4">
 <h4>In Class</h4>
 </div>
 <div id="at-home-2" class="section level4">
 <h4>At Home</h4>
 </div>
 </div>
-<div id="section-4" class="section level3">
-<h3>7/25</h3>
-<div id="in-class-4" class="section level4">
+<div id="section-3" class="section level3">
+<h3>7/18</h3>
+<div id="in-class-3" class="section level4">
 <h4>In Class</h4>
 </div>
 <div id="at-home-3" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
+</div>
+<div id="week-3" class="section level1">
+<h1>Week 3</h1>
+<div id="section-4" class="section level3">
+<h3>7/22</h3>
+<div id="in-class-4" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home-4" class="section level4">
+<h4>At Home</h4>
+</div>
+</div>
+<div id="section-5" class="section level3">
+<h3>7/25</h3>
+<div id="in-class-5" class="section level4">
+<h4>In Class</h4>
+</div>
+<div id="at-home-5" class="section level4">
 <h4>At Home</h4>
 </div>
 </div>
