--- a/README.html
+++ b/README.html
@@ -384,8 +384,8 @@ $(document).ready(function () {
 <div id="homework" class="section level1">
 <h1>HomeWork</h1>
 <ol style="list-style-type: decimal">
-<li><a href="https://jellyweiwei.github.io/Data-Science/Week%201/test.html">HW:0 Github &amp; RMarkdown</a></li>
-<li><a href>HW:1 網路爬蟲 &amp; 資料收集與清洗</a></li>
+<li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.8/test.html">HW:0 Github &amp; RMarkdown</a></li>
+<li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.11/HW_1.html">HW:1 網路爬蟲 &amp; 資料收集與清洗</a></li>
 <li><a href>HW:2 EDA &amp; 資料視覺化</a></li>
 <li><a href>HW:3 文字與數字複合式資料分析</a></li>
 </ol>
@@ -423,6 +423,10 @@ $(document).ready(function () {
 </div>
 <div id="at-home-1" class="section level4">
 <h4>At Home</h4>
+<ol style="list-style-type: decimal">
+<li>完成HW:1</li>
+<li>DataCamp: Intermediate R</li>
+</ol>
 </div>
 </div>
 </div>
@@ -432,6 +436,7 @@ $(document).ready(function () {
 <h3>7/15</h3>
 <div id="in-class-2" class="section level4">
 <h4>In Class</h4>
+<p>*講義:<a href="https://docs.google.com/presentation/d/e/2PACX-1vSx3-g4Z4LgimZKlKfk_L2gH00mDAyQo8DIugatiEXtCUI7hRNuxNtzzuobjLy-VadSpuohEsh4OeqK/pub?start=false&amp;loop=false&amp;delayms=3000&amp;slide=id.p">7/15</a></p>
 </div>
 <div id="at-home-2" class="section level4">
 <h4>At Home</h4>
