--- a/README.html
+++ b/README.html
@@ -386,7 +386,7 @@ $(document).ready(function () {
 <ol style="list-style-type: decimal">
 <li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.8/test.html">HW:0 Github &amp; RMarkdown</a></li>
 <li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.11/HW_1.html">HW:1 網路爬蟲 &amp; 資料收集與清洗</a></li>
-<li><a href>HW:2 EDA &amp; 資料視覺化</a></li>
+<li><a href="https://jellyweiwei.github.io/Data-Science/Week2_7.15/HW_2.html">HW:2 EDA &amp; 資料視覺化</a></li>
 <li><a href>HW:3 文字與數字複合式資料分析</a></li>
 </ol>
 </div>
@@ -436,16 +436,26 @@ $(document).ready(function () {
 <h3>7/15</h3>
 <div id="in-class-2" class="section level4">
 <h4>In Class</h4>
-<p>*講義:<a href="https://docs.google.com/presentation/d/e/2PACX-1vSx3-g4Z4LgimZKlKfk_L2gH00mDAyQo8DIugatiEXtCUI7hRNuxNtzzuobjLy-VadSpuohEsh4OeqK/pub?start=false&amp;loop=false&amp;delayms=3000&amp;slide=id.p">7/15</a></p>
+<p>*講義:<a href="https://docs.google.com/presentation/d/e/2PACX-1vTvdUOo9w0RFYs8NBIr7svtShHutVeipc9zAMFJN8Bq2LzVCwBpvEO5ChIfaoRjspZDAJSMbJOjWBL8/pub?start=false&amp;loop=false&amp;delayms=3000&amp;slide=id.p">7/15</a></p>
+<ol style="list-style-type: decimal">
+<li>整理資料</li>
+<li>資料圖像化實作</li>
+</ol>
 </div>
 <div id="at-home-2" class="section level4">
 <h4>At Home</h4>
+<ol style="list-style-type: decimal">
+<li>完成HW:2</li>
+<li>練習使用ggplot2</li>
+<li>練習使用GISTools</li>
+</ol>
 </div>
 </div>
 <div id="section-3" class="section level3">
 <h3>7/18</h3>
 <div id="in-class-3" class="section level4">
 <h4>In Class</h4>
+<p>*講義:<a href="https://docs.google.com/presentation/d/e/2PACX-1vRGRc4TLe_rffXaSlWPU7rWZx4fQ7HxMcwHXbTAxfWh6xwlBtM9rxA1rfHI5eM-2GaxkMGC2NMSnUj5/pub?start=false&amp;loop=false&amp;delayms=3000&amp;slide=id.p">7/18</a></p>
 </div>
 <div id="at-home-3" class="section level4">
 <h4>At Home</h4>
