--- a/README.html
+++ b/README.html
@@ -380,15 +380,15 @@ $(document).ready(function () {
 <div class="section level1">
 <h1>2019夏季學院【資料科學程式設計】</h1>
 <p>學生：趙文<br> 學校：國立臺灣師範大學<br> 學系：人類發展與家庭學系營養與科學教育組大四<br> 學號：40406311E</p>
-</div>
-<div id="homework" class="section level1">
-<h1>HomeWork</h1>
+<blockquote>
+<h1 id="homework">HomeWork</h1>
 <ol style="list-style-type: decimal">
 <li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.8/test.html">HW:0 Github &amp; RMarkdown</a></li>
 <li><a href="https://jellyweiwei.github.io/Data-Science/Week1_7.11/HW_1.html">HW:1 網路爬蟲 &amp; 資料收集與清洗</a></li>
 <li><a href="https://jellyweiwei.github.io/Data-Science/Week2_7.15/HW_2.html">HW:2 EDA &amp; 資料視覺化</a></li>
 <li><a href>HW:3 文字與數字複合式資料分析</a></li>
 </ol>
+</blockquote>
 </div>
 <div id="week-1" class="section level1">
 <h1>Week 1</h1>
@@ -424,7 +424,7 @@ $(document).ready(function () {
 <div id="at-home-1" class="section level4">
 <h4>At Home</h4>
 <ol style="list-style-type: decimal">
-<li>完成HW:1</li>
+<li>完成<a href="(https://jellyweiwei.github.io/Data-Science/Week1_7.11/HW_1.html)">HW:1</a></li>
 <li>DataCamp: Intermediate R</li>
 </ol>
 </div>
@@ -445,7 +445,7 @@ $(document).ready(function () {
 <div id="at-home-2" class="section level4">
 <h4>At Home</h4>
 <ol style="list-style-type: decimal">
-<li>完成HW:2</li>
+<li>完成<a href="(https://jellyweiwei.github.io/Data-Science/Week2_7.15/HW_2.html)">HW:2</a></li>
 <li>練習使用ggplot2</li>
 <li>練習使用GISTools</li>
 </ol>
