--- a/Week3_期末專題/雨量-風速-傷亡.html
+++ b/Week3_期末專題/雨量-風速-傷亡.html
@@ -422,7 +422,9 @@ rh2 &lt;- rh1[-c(1,2),]
 colnames(rh2)[5]=&quot;wind&quot;
 
 rh2$cas.total &lt;- as.numeric(rh2$cas.total)</code></pre>
-<p>##整理路徑</p>
+</div>
+<div class="section level2">
+<h2>整理路徑</h2>
 <pre class="r"><code>colnames(sp1)[1]=&quot;name&quot;
 colnames(sp1)[2]=&quot;path&quot;
 colnames(sp1)[3]=&quot;date&quot;
